# DataExtract

./: .env.example  .env.microservice  .env.production.example  .pre-commit-config.yaml  CLEANUP.md  CODE_QUALITY_ANALYSIS.md  CODE_QUALITY_IMPROVEMENTS.md  Dockerfile  IMPLEMENTATION_STATUS.md  MICROSERVICE.md  Makefile  PROJECT_ANALYSIS_REPORT.md  README.md  SECURITY.md  TEST_SETUP.md  bandit-report.json  docker-compose.microservice.yml  docker-compose.otel.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  filebeat.yml  mkdocs.yml  nginx.conf  otel-collector-config.yaml  prometheus.yml  pyproject.toml  security-scan.sh  test_app.py
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  async_extract.py  extract.py  health.py
app/core/: auth.py  cache.py  config.py  exceptions.py  logging.py  metrics.py  queue.py  security.py  validation.py
app/extractors/: __init__.py  base.py  docling_extractor.py  docx_extractor.py  image_extractor.py  media_extractor.py  pdf_extractor.py  text_extractor.py  tika_extractor.py
app/models/: schemas.py
app/workers/: __init__.py  tasks.py
config/: redis.conf
docs/: CHANGELOG.md  api.md  deployment.md  development.md  index.md  installation.md
examples/: docling_usage.py
k8s/: deployment.yaml  service.yaml
ssl/: generate-cert.sh
tests/: __init__.py  test_config.py  test_e2e_docker.py  test_extractors.py  test_integration.py  test_performance.py  test_performance_microservice.py  test_schemas.py
