[project]
name = "universal-file-extractor-api"
version = "0.1.0"
description = "Eine einheitliche API für die Extraktion von Inhalten aus verschiedenen Dateiformaten"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # docling für Datenextraktion
    "docling>=0.1.0",
    # Dokument-Extraktion
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.1",
    "python-pptx>=0.6.23",
    "odfpy>=1.4.1",
    # Tabellen-Extraktion
    "pandas>=2.1.4",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    # Datenformate
    "lxml>=4.9.3",
    "PyYAML>=6.0.1",
    "beautifulsoup4>=4.12.2",
    # Bildverarbeitung und OCR
    "Pillow>=10.1.0",
    "opencv-python>=4.8.1.78",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    # Medien-Extraktion
    "moviepy>=1.0.3",
    "pydub>=0.25.1",
    "speechrecognition>=3.10.0",
    # Archiv-Extraktion
    "patool>=1.12",
    "py7zr>=0.20.8",
    # Dateityp-Erkennung
    "python-magic>=0.4.27",
    "aiofiles>=23.2.1",
    # Asynchrone Verarbeitung
    "celery>=5.3.4",
    "redis>=5.0.1",
    "rq>=1.15.1",
    # Parallelisierung
    "asyncio-throttle>=1.0.2",
    # Cloud und Deployment
    "gunicorn>=21.2.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
    "pre-commit>=3.5.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/universal-file-extractor-api"
Documentation = "https://yourusername.github.io/universal-file-extractor-api"
Repository = "https://github.com/yourusername/universal-file-extractor-api"
Issues = "https://github.com/yourusername/universal-file-extractor-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff-Konfiguration
[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "ARG001", # unused-function-args
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q",  # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "YTT", # flake8-2020
    "FBT", # flake8-boolean-trap
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C90", # mccabe
    "DTZ", # flake8-datetimez
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PTH", # flake8-use-pathlib
    "AIR", # flake8-airflow
    "BLE", # flake8-blind-except
    "FURB", # flake8-furbish
    "LOG", # flake8-logging-format
    "PERF", # perflint
    "PIC", # flake8-import-conventions
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "NPY", # numpy-vet
    "AIR", # flake8-airflow
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR0912", # too many branches
    "PLR0911", # too many return statements
    "PLR2004", # magic value used in comparison
    "PLR0904", # too many public methods
    "PLR0902", # too many instance attributes
    "PLR0905", # too many statements in __init__
    "PLR0906", # too many return statements
    "PLR0916", # too many boolean expressions
    "PLR0917", # too many boolean expressions
    "PLR0918", # too many boolean expressions
    "PLR0919", # too many boolean expressions
    "PLR0920", # too many boolean expressions
    "PLR0921", # too many boolean expressions
    "PLR0922", # too many boolean expressions
    "PLR0923", # too many boolean expressions
    "PLR0924", # too many boolean expressions
    "PLR0925", # too many boolean expressions
    "PLR0926", # too many boolean expressions
    "PLR0927", # too many boolean expressions
    "PLR0928", # too many boolean expressions
    "PLR0929", # too many boolean expressions
    "PLR0930", # too many boolean expressions
    "PLR0931", # too many boolean expressions
    "PLR0932", # too many boolean expressions
    "PLR0933", # too many boolean expressions
    "PLR0934", # too many boolean expressions
    "PLR0935", # too many boolean expressions
    "PLR0936", # too many boolean expressions
    "PLR0937", # too many boolean expressions
    "PLR0938", # too many boolean expressions
    "PLR0939", # too many boolean expressions
    "PLR0940", # too many boolean expressions
    "PLR0941", # too many boolean expressions
    "PLR0942", # too many boolean expressions
    "PLR0943", # too many boolean expressions
    "PLR0944", # too many boolean expressions
    "PLR0945", # too many boolean expressions
    "PLR0946", # too many boolean expressions
    "PLR0947", # too many boolean expressions
    "PLR0948", # too many boolean expressions
    "PLR0949", # too many boolean expressions
    "PLR0950", # too many boolean expressions
    "PLR0951", # too many boolean expressions
    "PLR0952", # too many boolean expressions
    "PLR0953", # too many boolean expressions
    "PLR0954", # too many boolean expressions
    "PLR0955", # too many boolean expressions
    "PLR0956", # too many boolean expressions
    "PLR0957", # too many boolean expressions
    "PLR0958", # too many boolean expressions
    "PLR0959", # too many boolean expressions
    "PLR0960", # too many boolean expressions
    "PLR0961", # too many boolean expressions
    "PLR0962", # too many boolean expressions
    "PLR0963", # too many boolean expressions
    "PLR0964", # too many boolean expressions
    "PLR0965", # too many boolean expressions
    "PLR0966", # too many boolean expressions
    "PLR0967", # too many boolean expressions
    "PLR0968", # too many boolean expressions
    "PLR0969", # too many boolean expressions
    "PLR0970", # too many boolean expressions
    "PLR0971", # too many boolean expressions
    "PLR0972", # too many boolean expressions
    "PLR0973", # too many boolean expressions
    "PLR0974", # too many boolean expressions
    "PLR0975", # too many boolean expressions
    "PLR0976", # too many boolean expressions
    "PLR0977", # too many boolean expressions
    "PLR0978", # too many boolean expressions
    "PLR0979", # too many boolean expressions
    "PLR0980", # too many boolean expressions
    "PLR0981", # too many boolean expressions
    "PLR0982", # too many boolean expressions
    "PLR0983", # too many boolean expressions
    "PLR0984", # too many boolean expressions
    "PLR0985", # too many boolean expressions
    "PLR0986", # too many boolean expressions
    "PLR0987", # too many boolean expressions
    "PLR0988", # too many boolean expressions
    "PLR0989", # too many boolean expressions
    "PLR0990", # too many boolean expressions
    "PLR0991", # too many boolean expressions
    "PLR0992", # too many boolean expressions
    "PLR0993", # too many boolean expressions
    "PLR0994", # too many boolean expressions
    "PLR0995", # too many boolean expressions
    "PLR0996", # too many boolean expressions
    "PLR0997", # too many boolean expressions
    "PLR0998", # too many boolean expressions
    "PLR0999", # too many boolean expressions
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["PLR2004", "S101"]

[tool.ruff.isort]
known-first-party = ["app"]
known-third-party = ["fastapi", "pydantic", "celery", "redis"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pycodestyle]
max-doc-length = 88

[tool.ruff.pyupgrade]
preserve-types = true

[tool.ruff.pytest]
allow-asyncio-fixtures = true

[tool.ruff.numpy]
deprecation-error = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["frozenset", "tuple"]

[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.flake8-pytest-style]
fixture-parentheses = true
parametrize-names-type = "csv"
parametrize-values-type = "tuple"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.flake8-type-checking]
strict = true

[tool.ruff.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.perflint]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.pyupgrade]
preserve-types = true

[tool.ruff.simplify]
allow-explicit-bool = true

[tool.ruff.tidy-imports]
ban-relative-imports = "all"

[tool.ruff.unused-arguments]
ignore-variadic-names = true

[tool.ruff.vet]
allow-generators = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest-Konfiguration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage-Konfiguration
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# MyPy-Konfiguration (falls benötigt)
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "moviepy.*",
    "cv2.*",
    "easyocr.*",
    "pytesseract.*",
    "speech_recognition.*",
]
ignore_missing_imports = true